Flow/src/Lexer/FlowParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.12.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Flow.g4 by ANTLR 4.12.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.12.0")]
[System.CLSCompliant(false)]
public partial class FlowParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, WS=20, TRUE=21, FALSE=22, ADD=23, SUB=24, MUL=25, 
		DIV=26, MOD=27, EQ=28, NEQ=29, LT=30, LTE=31, GT=32, GTE=33, AND=34, OR=35, 
		NOT=36, LPAREN=37, RPAREN=38, LBRACE=39, RBRACE=40, LBRACK=41, RBRACK=42, 
		COMMA=43, SEMICOLON=44, COLON=45, ARROW=46, INTEGER=47, IDENTIFIER=48, 
		COMMENT=49, BLOCK_COMMENT=50, STRING=51, ERR_CHAR=52, ERR_TOKEN=53;
	public const int
		RULE_program = 0, RULE_import_list = 1, RULE_import_statement = 2, RULE_module_declaration = 3, 
		RULE_statement = 4, RULE_variable_declaration = 5, RULE_constant_declaration = 6, 
		RULE_variable_value = 7, RULE_type = 8, RULE_generic_type = 9, RULE_type_parameter_list = 10, 
		RULE_type_parameter = 11, RULE_assignment_statement = 12, RULE_print_statement = 13, 
		RULE_if_statement = 14, RULE_while_statement = 15, RULE_for_statement = 16, 
		RULE_range_clause = 17, RULE_for_expression = 18, RULE_return_statement = 19, 
		RULE_function_call_statement = 20, RULE_argument_list = 21, RULE_statement_block = 22, 
		RULE_function_declaration = 23, RULE_parameter_list = 24, RULE_parameter = 25, 
		RULE_unary_operation = 26, RULE_expression = 27, RULE_logical_or = 28, 
		RULE_logical_and = 29, RULE_equality = 30, RULE_relational = 31, RULE_additive = 32, 
		RULE_multiplicative = 33, RULE_expression_value = 34, RULE_function_call_expression = 35, 
		RULE_literal = 36, RULE_identifier = 37;
	public static readonly string[] ruleNames = {
		"program", "import_list", "import_statement", "module_declaration", "statement", 
		"variable_declaration", "constant_declaration", "variable_value", "type", 
		"generic_type", "type_parameter_list", "type_parameter", "assignment_statement", 
		"print_statement", "if_statement", "while_statement", "for_statement", 
		"range_clause", "for_expression", "return_statement", "function_call_statement", 
		"argument_list", "statement_block", "function_declaration", "parameter_list", 
		"parameter", "unary_operation", "expression", "logical_or", "logical_and", 
		"equality", "relational", "additive", "multiplicative", "expression_value", 
		"function_call_expression", "literal", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "'module'", "'var'", "'='", "'const'", "'array'", "'map'", 
		"'int'", "'bool'", "'string'", "'Print'", "'if'", "'else'", "'while'", 
		"'for'", "'in'", "'where'", "'return'", "'let'", null, "'true'", "'false'", 
		"'+'", "'-'", "'*'", "'/'", "'mod'", "'is'", "'is not'", "'<'", "'<='", 
		"'>'", "'>='", "'and'", "'or'", "'not'", "'('", "')'", "'{'", "'}'", "'['", 
		"']'", "','", "';'", "':'", "'->'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "WS", "TRUE", "FALSE", 
		"ADD", "SUB", "MUL", "DIV", "MOD", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", 
		"AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
		"RBRACK", "COMMA", "SEMICOLON", "COLON", "ARROW", "INTEGER", "IDENTIFIER", 
		"COMMENT", "BLOCK_COMMENT", "STRING", "ERR_CHAR", "ERR_TOKEN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Flow.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FlowParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FlowParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FlowParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Import_listContext import_list() {
			return GetRuleContext<Import_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Module_declarationContext module_declaration() {
			return GetRuleContext<Module_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(FlowParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FlowParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			import_list();
			State = 77;
			module_declaration();
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 282024733366312L) != 0)) {
				{
				{
				State = 78;
				statement();
				}
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 84;
			Match(RBRACE);
			State = 85;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Import_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Import_statementContext[] import_statement() {
			return GetRuleContexts<Import_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Import_statementContext import_statement(int i) {
			return GetRuleContext<Import_statementContext>(i);
		}
		public Import_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_import_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterImport_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitImport_list(this);
		}
	}

	[RuleVersion(0)]
	public Import_listContext import_list() {
		Import_listContext _localctx = new Import_listContext(Context, State);
		EnterRule(_localctx, 2, RULE_import_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 87;
				import_statement();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Import_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(FlowParser.SEMICOLON, 0); }
		public Import_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_import_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterImport_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitImport_statement(this);
		}
	}

	[RuleVersion(0)]
	public Import_statementContext import_statement() {
		Import_statementContext _localctx = new Import_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_import_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(T__0);
			State = 94;
			identifier();
			State = 95;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(FlowParser.RBRACE, 0); }
		public Module_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterModule_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitModule_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Module_declarationContext module_declaration() {
		Module_declarationContext _localctx = new Module_declarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_module_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 97;
				Match(T__1);
				State = 98;
				identifier();
				State = 99;
				statement();
				State = 100;
				Match(RBRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Constant_declarationContext constant_declaration() {
			return GetRuleContext<Constant_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_declarationContext variable_declaration() {
			return GetRuleContext<Variable_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_statementContext assignment_statement() {
			return GetRuleContext<Assignment_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Print_statementContext print_statement() {
			return GetRuleContext<Print_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public While_statementContext while_statement() {
			return GetRuleContext<While_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public For_statementContext for_statement() {
			return GetRuleContext<For_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Return_statementContext return_statement() {
			return GetRuleContext<Return_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_call_statementContext function_call_statement() {
			return GetRuleContext<Function_call_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Statement_blockContext statement_block() {
			return GetRuleContext<Statement_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Function_declarationContext function_declaration() {
			return GetRuleContext<Function_declarationContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			State = 115;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104;
				constant_declaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 105;
				variable_declaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 106;
				assignment_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 107;
				print_statement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 108;
				if_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 109;
				while_statement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 110;
				for_statement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 111;
				return_statement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 112;
				function_call_statement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 113;
				statement_block();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 114;
				function_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variable_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FlowParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_valueContext variable_value() {
			return GetRuleContext<Variable_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(FlowParser.SEMICOLON, 0); }
		public Variable_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterVariable_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitVariable_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Variable_declarationContext variable_declaration() {
		Variable_declarationContext _localctx = new Variable_declarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_variable_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(T__2);
			State = 118;
			identifier();
			State = 119;
			Match(COLON);
			State = 120;
			type();
			State = 121;
			Match(T__3);
			State = 122;
			variable_value();
			State = 123;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Constant_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FlowParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_valueContext variable_value() {
			return GetRuleContext<Variable_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(FlowParser.SEMICOLON, 0); }
		public Constant_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterConstant_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitConstant_declaration(this);
		}
	}

	[RuleVersion(0)]
	public Constant_declarationContext constant_declaration() {
		Constant_declarationContext _localctx = new Constant_declarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_constant_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(T__4);
			State = 126;
			identifier();
			State = 127;
			Match(COLON);
			State = 128;
			type();
			State = 129;
			Match(T__3);
			State = 130;
			variable_value();
			State = 131;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variable_valueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(FlowParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(FlowParser.RBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FlowParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FlowParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FlowParser.COMMA, 0); }
		public Variable_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterVariable_value(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitVariable_value(this);
		}
	}

	[RuleVersion(0)]
	public Variable_valueContext variable_value() {
		Variable_valueContext _localctx = new Variable_valueContext(Context, State);
		EnterRule(_localctx, 14, RULE_variable_value);
		try {
			State = 151;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TRUE:
			case FALSE:
			case NOT:
			case LPAREN:
			case INTEGER:
			case IDENTIFIER:
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 133;
				expression();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 2);
				{
				State = 134;
				Match(T__5);
				State = 135;
				Match(LBRACK);
				State = 136;
				type();
				State = 137;
				Match(RBRACK);
				State = 138;
				Match(LPAREN);
				State = 139;
				expression();
				State = 140;
				Match(RPAREN);
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 3);
				{
				State = 142;
				Match(T__6);
				State = 143;
				Match(LBRACK);
				State = 144;
				type();
				State = 145;
				Match(COMMA);
				State = 146;
				type();
				State = 147;
				Match(RBRACK);
				State = 148;
				Match(LPAREN);
				State = 149;
				Match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK() { return GetToken(FlowParser.LBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK() { return GetToken(FlowParser.RBRACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FlowParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Generic_typeContext generic_type() {
			return GetRuleContext<Generic_typeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 16, RULE_type);
		try {
			State = 169;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
				EnterOuterAlt(_localctx, 1);
				{
				State = 153;
				Match(T__7);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 154;
				Match(T__8);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 155;
				Match(T__9);
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 4);
				{
				State = 156;
				Match(T__5);
				State = 157;
				Match(LBRACK);
				State = 158;
				type();
				State = 159;
				Match(RBRACK);
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 5);
				{
				State = 161;
				Match(T__6);
				State = 162;
				Match(LBRACK);
				State = 163;
				type();
				State = 164;
				Match(COMMA);
				State = 165;
				type();
				State = 166;
				Match(RBRACK);
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 6);
				{
				State = 168;
				generic_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Generic_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(FlowParser.LT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_parameter_listContext type_parameter_list() {
			return GetRuleContext<Type_parameter_listContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(FlowParser.GT, 0); }
		public Generic_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_generic_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.EnterGeneric_type(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFlowListener typedListener = listener as IFlowListener;
			if (typedListener != null) typedListener.ExitGeneric_type(this);
		}
	}
